--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,9 +6,14 @@
 # CONFIG_ZMK_DISPLAY=y
 
 # Set deep sleep to 30 minutes
-CONFIG_ZMK_SLEEP=Y
+CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
+# Disable deprecated option  
+# CONFIG_BT_LL_SW_LLCP_LEGACY is not set
+
 # Make Bluetooth stronger
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
 # Change board name
 CONFIG_ZMK_KEYBOARD_NAME="Corne View"
